Fix spacing issue of single template

--- a/src/style/templates/ad-unit.css
+++ b/src/style/templates/ad-unit.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+.ad-unit--single {
+    padding: var(--padding);
+}
+
 .ad-unit__carousel {
     width: var(--width);
 }
